--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><!--Ekatimsati-->Pratyeka Yana</title>
+    <!--Ekatimsati-->
+    <title>Pratyeka Yana</title>
 </head>
 <body>
     <h1>The journey to programming Nirvana</h1>
